Update links to use GitHub Pages URLs

--- a/site 1/Site-Sport-Justin.html.html
+++ b/site 1/Site-Sport-Justin.html.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le Kick-Boxing - Justin Armengol</title>
-    <link rel="stylesheet" href="D:/site 1/Site-Sport-Justin.css">
+    <link rel="stylesheet" href="makefafsbitethecurb161.github.io/site 1/Site-Sport-Justin.css">
 </head>
 <body>
     <section id="section-titre">
@@ -13,7 +13,7 @@
         </h1>
     </section>
     
-    <a href="D:\site 1\sous-parties\1\histoire.html">
+    <a href="makefafsbitethecurb161.github.io\site 1\sous-parties\1\histoire.html">
     <div class="boite1">
         <h3>
         HISTOIRE
@@ -21,7 +21,7 @@
     </div>
     </a>
 
-    <a href="D:\site 1\sous-parties\2\regles.html">
+    <a href="makefafsbitethecurb161.github.io\site 1\sous-parties\2\regles.html">
     <div class="boite2">
         <h3>
         REGLES
@@ -29,7 +29,7 @@
     </div>
     </a>
    
-    <a href="D:\site 1\sous-parties\3\ceintures.html">
+    <a href="makefafsbitethecurb161.github.io\site 1\sous-parties\3\ceintures.html">
     <div class="boite3">
         <h3>
         CEINTURES
@@ -38,4 +38,5 @@
     </a>
     
 </body>
+
 </html>
