--- a/site 1/sous-parties/1/histoire.html
+++ b/site 1/sous-parties/1/histoire.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le Kick-Boxing - Justin Armengol</title>
-    <link rel="stylesheet" href="D:\site 1\sous-parties\1\histoire.css">
+    <link rel="stylesheet" href="makefafsbitethecurb161.github.io\site 1\sous-parties\1\histoire.css">
     </head>
 
 <body>
@@ -20,7 +20,7 @@
     <p>Au fil des ans, le kick-boxing a gagné en popularité dans le monde entier, avec des compétitions professionnelles et amateurs. Il est maintenant pratiqué par des millions de personnes pour le fitness, l'autodéfense et la compétition.</p>
     </div>
 
-    <a href="D:\site 1\Site-Sport-Justin.html.html">
+    <a href="makefafsbitethecurb161.github.io\site 1\Site-Sport-Justin.html.html">
     <div class="boite4">
         <h2>
         MENU
@@ -29,4 +29,5 @@
     </a>
 
 </body>
+
 </html>
