--- a/site 1/sous-parties/2/regles.html
+++ b/site 1/sous-parties/2/regles.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le Kick-Boxing - Justin Armengol</title>
-    <link rel="stylesheet" href="D:\site 1\sous-parties\2\regles.css">
+    <link rel="stylesheet" href="makefafsbitethecurb161.github.io\site 1\sous-parties\2\regles.css">
     </head>
 
 <body>
@@ -22,7 +22,7 @@
     <p>Certaines promotions telles que le "K1" autorisent l'utilisation des genoux et des coups de pieds aux jambes. Ce qui a démocratisé cet ensemble de règles sous le même nom que la promotion.</p>
     </div>
 
-    <a href="D:\site 1\Site-Sport-Justin.html.html">
+    <a href="makefafsbitethecurb161.github.io\site 1\Site-Sport-Justin.html.html">
     <div class="boite4">
         <h2>
         MENU
@@ -31,4 +31,5 @@
     </a>
     
 </body>
+
 </html>
