--- a/site 1/sous-parties/3/ceintures.html
+++ b/site 1/sous-parties/3/ceintures.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le Kick-Boxing - Justin Armengol</title>
-    <link rel="stylesheet" href="D:/site 1/sous-parties/3/ceintures.css">
+    <link rel="stylesheet" href="makefafsbitethecurb161.github.io/site 1/sous-parties/3/ceintures.css">
     </head>
 
 <body>
@@ -22,7 +22,7 @@
     <p>Dans chaque promotion, une ceinture existe par classe de poids, les meilleurs combattants du monde arrivent à gagner les ceintures de plusieurs divisions.</p>
     </div>
 
-    <a href="D:\site 1\Site-Sport-Justin.html.html">
+    <a href="makefafsbitethecurb161.github.io\site 1\Site-Sport-Justin.html.html">
     <div class="boite4">
         <h2>
         MENU
@@ -31,4 +31,5 @@
     </a>
     
 </body>
+
 </html>
